--- a/conclave-backend/package.json
+++ b/conclave-backend/package.json
@@ -13,7 +13,10 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.4.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -25,7 +28,7 @@
     "@babel/runtime": "^7.12.1",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
-    "nodemon": "^2.0.5",
+    "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
     "sinon-chai": "^3.5.0",
     "supertest": "^5.0.0"
