--- a/conclave-backend/.eslintrc.json
+++ b/conclave-backend/.eslintrc.json
@@ -21,6 +21,12 @@
     }
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "object-curly-newline": ["error", {
+      "ObjectExpression": { "multiline": true },
+      "ObjectPattern": { "multiline": true },
+      "ImportDeclaration": "never",
+      "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+    }]
   }
 }
