--- a/conclave-backend/package.json
+++ b/conclave-backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "prestart": "babel ./src --out-dir build",
     "start": "node src/bin/www",
+    "lint": "eslint ./src --fix",
     "startdev": "nodemon --exec babel-node ./src/bin/www",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register"
   },
