--- a/conclave-backend/package.json
+++ b/conclave-backend/package.json
@@ -31,6 +31,9 @@
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.1",
     "chai": "^4.2.0",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
