--- a/conclave-backend/package.json
+++ b/conclave-backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prestart": "babel ./src --out-dir build",
-    "start": "node src/bin/www",
+    "start": "node ./build/bin/www",
     "lint": "eslint ./src --fix",
     "startdev": "nodemon --exec babel-node ./src/bin/www",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register"
