--- a/conclave-backend/package.json
+++ b/conclave-backend/package.json
@@ -16,16 +16,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "express-session": "^1.17.1",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-session": "^1.0.2",
     "pg": "^8.4.1",
     "pg-hstore": "^2.3.3",
-    "redis": "^3.0.2",
-    "sequelize": "^6.3.5",
-    "uuid": "^8.3.1"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
