--- a/conclave-frontend/package.json
+++ b/conclave-frontend/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.7.2",
     "axios": "^0.20.0",
+    "draft-js": "^0.11.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
