--- a/conclave-backend/.eslintrc.json
+++ b/conclave-backend/.eslintrc.json
@@ -27,6 +27,7 @@
       "ObjectPattern": { "multiline": true },
       "ImportDeclaration": "never",
       "ExportDeclaration": { "multiline": true, "minProperties": 3 }
-    }]
+    }],
+    "max-len": ["error", { "code": 150 }]
   }
 }
